sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/Company.java
package org.example;

public interface Company extends java.io.Serializable {

   public org.example.InvalidClassname getInvalidClassname();

   public void setInvalidClassname(org.example.InvalidClassname value);

   public org.example.InvalidClassname1 getInvalidClassname1();

   public void setInvalidClassname1(org.example.InvalidClassname1 value);

   public java.util.List getPorder();

   public void setPorder(java.util.List value);

   public java.util.List getItem();

   public void setItem(java.util.List value);

   public java.lang.String getName();

   public void setName(java.lang.String value);


}

